@@ -1,3 +1,13 @@
+2004-02-25  Theodore A. Roth  <troth@openavr.org>
+
+	* src/jtagprog.cc (eraseProgramMemory): Add comment noting that this is
+	really a chip erase operation.
+	(downloadToTarget): Don't erase the device here if programming.
+	* src/main.cc (main): Never erase the device unless the user explicitly
+	gives the --erase option.
+	When programming without the --erase option, issue a warning about the
+	change in behavior.
+
 2004-02-06  Theodore A. Roth  <troth@openavr.org>
 
 	* configure.ac (AC_INIT): Bump version.
